<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_profile_settings"
        android:icon="@drawable/ic_person"
        android:title="@string/menu_profile_settings"
        app:showAsAction="always" />
</menu>
